# RiichiEnv

./: .gitignore  .pre-commit-config.yaml  DEVEL.md  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  pytest.yml  release.yml  ruff_ty.yml  security-audit.yml
benchmark/: bench_agari.py
demos/: random_game.py  replay_debug.ipynb  replay_demo.ipynb
demos/ml_baseline/: .gitignore  README.md  buffer.py  cql_dataset.py  cql_model.py  feature_encoder.py  grp_dataloader.py  learner.py  pyproject.toml  ray_actor.py  test_cql.py  test_online.py  train_cql.py  train_grp.py  train_online.py  unified_model.py
demos/ml_baseline/configs/: baseline.yml  discard_history.yml  discard_history_shanten.yml  dqn.yml  extended.yml  extended_sp.yml  ppo.yml  ppo_async.yml  ppo_async_rev2.yml  ppo_baseline.yml  ppo_discard_history.yml  ppo_discard_history_shanten.yml
demos/ml_baseline/scripts/: profile_rollout.py  train_cql.py  train_grp.py  train_online.py
demos/ml_baseline/src/riichienv_ml/: agent.py  config.py
demos/ml_baseline/src/riichienv_ml/data/: cql_dataset.py
demos/ml_baseline/src/riichienv_ml/models/: actor_critic.py  cql_model.py  grp_model.py  mortal_model.py
demos/ml_baseline/src/riichienv_ml/training/: buffer.py  cql_trainer.py  grp_trainer.py  learner.py  online_trainer.py  ppo_learner.py  ppo_trainer.py  ppo_worker.py  ray_actor.py
docs/: DATA_REPRESENTATION.md  DEVELOPMENT_GUIDE.md  FEATURE_ENCODING.md  RULES.md
examples/: random_game.py
native/: Cargo.toml
native/src/: agari_calculator.rs  env.rs  hand_evaluator.rs  lib.rs  observation.rs  parser.rs  replay.rs  rule.rs  score.rs  shanten.rs  sp.rs  state.rs  tests.rs  types.rs  win_projection.rs  yaku.rs  yaku_checker.rs
native/src/replay/: mjai_replay.rs  mjsoul_replay.rs  mod.rs
native/src/state/: event_handler.rs  legal_actions.rs  mod.rs  player.rs  wall.rs
riichienv/: .gitignore  Cargo.toml  README.md  pyproject.toml
riichienv-core/: Cargo.toml  README.md
riichienv-core/benches/: agari_bench.rs
riichienv-core/src/: action.rs  agari.rs  errors.rs  game_variant.rs  hand_evaluator.rs  hand_evaluator_3p.rs  lib.rs  parser.rs  rule.rs  score.rs  shanten.rs  tests.rs  types.rs  win_projection.rs  yaku.rs  yaku_3p.rs
riichienv-ml/: .gitignore  README.md  pyproject.toml
riichienv-ml/scripts/: infer_hand_pred.py  test_bc_3p.py  test_bc_4p.py  train_bc.py  train_grp.py  train_hand_pred.py  train_ppo.py
riichienv-python/: Cargo.toml
riichienv-python/src/: env.rs  lib.rs
riichienv-ui/: DEVELOPMENT_GUIDE.md  README.md  index.html  package-lock.json  package.json  player_custom_demo.html
riichienv-ui/demos/: README.md  replay_demo.ipynb
riichienv-ui/src/: base_viewer.ts  config.ts  constants.ts  controller.ts  game_state.ts  index.ts  renderer.ts  (+7 more)
riichienv-wasm/: Cargo.toml
riichienv-wasm/src/: lib.rs
riichienv/scripts/: verify_gym_api_with_mjsoul.py  verify_yakus.py
riichienv/src/: agari.rs  agari_calculator.rs  env.rs  lib.rs  parser.rs  replay.rs  types.rs  yaku.rs
riichienv/src/riichienv/: __init__.py  _riichienv.pyi  action.py  convert.py  env.py  hand.py  meld.py  rules.py
riichienv/src/riichienv/agents/: random_agent.py
riichienv/src/riichienv/visualizer/: __init__.py  viewer.py
riichienv/src/riichienv/visualizer/assets/: viewer.js
riichienv/tests/: test_agari_calculator.py  test_calculate_score.py  test_chankan.py  test_claim_priority.py  test_core.py  test_daiminkan.py  test_env.py  test_env_ranks_points.py  test_env_scoring.py  test_furiten.py  test_game_modes.py  test_game_rules.py  test_kakan.py  test_kyushu_kyuhai.py  test_meld_aka.py  test_metadata_injection.py  test_midway_draw.py  test_mjai_action.py  test_mjai_parity.py  test_oyayame_tiebreak.py  test_paishan.py  test_pao.py  test_pao_honba.py  test_riichi_autoplay.py  test_riichi_autoplay_pass.py  test_riichi_no_claim.py  test_riichi_pass.py  test_verifier_daiminkan.py
riichienv/tests/env/: helper.py  test_env_ranks_points.py  test_game_modes.py  test_game_rules.py  test_honba_reset.py  test_kuikae.py  test_paishan.py  test_riichi_no_claims.py  test_riichienv.py  test_riichienv_hora.py  test_temporary_furiten.py
riichienv/tests/env/actions/: test_daiminkan_rinshan_draw.py  test_kakan.py  test_kyushu_kyuhai.py  test_meld_aka.py  test_mjai_action.py
riichienv/tests/env/agari/: test_chankan.py  test_pao.py  test_pao_honba.py
riichienv/tests/env/validation/: test_furiten_rules.py  test_kuikae.py  test_riichi_autoplay_pass.py  test_temporary_furiten.py
scripts/: repro_encode_shanten_efficiency_houou.py  validate_logs.py  validate_tenhou_logs.py
tests/: test_agari_calculator.py  test_core.py  test_env_scoring.py  test_metadata_injection.py  test_midway_draw.py  test_mjai_parity.py  test_mjai_replay.py  test_observation_serialization.py  test_oyayame_tiebreak.py  test_riichi_autoplay.py  test_shanten.py
tools/: README.md
tools/benchmark-agari/: bench_agari.py  pyproject.toml
tools/mjsoul-parser/: .gitignore  README.md  pyproject.toml
tools/mjsoul-scoring-validation/: README.md  main.py  pyproject.toml  validate_env_3p.py  validate_env_4p.py
(+130 files in other folders)
