[package]
name = "riichienv"
version = "0.2.0"
edition = "2021"

[lib]
name = "_riichienv"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"


[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
