[project]
name = "benchmark"
version = "0.1.0"
description = "Benchmarks for RiichiEnv vs Mahjong"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mahjong==1.4.0",
    "riichienv",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
agari = "bench_agari:main"

[tool.hatch.build.targets.wheel]
force-include = { "bench_agari.py" = "bench_agari.py" }

[tool.uv.sources]
riichienv = { path = "../../riichienv", editable = true }
