[project]
name = "mjsoul-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "protobuf>=5.29.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mjsoul_parser"]

[tool.ruff]
target-version = "py313"
src = ["src"]
line-length = 79
