[project]
name = "mjsoul-scoring-validation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "riichienv",
    "mjsoul-parser",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
riichienv = { workspace = true }
mjsoul-parser = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "main:main"

[tool.hatch.build.targets.wheel]
force-include = { "main.py" = "main.py" }
